doc: detail doc

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -72,7 +72,7 @@
 |   √   | search_user_by_email                | user_id, session_id, query_email                  | user_id, status                                                                                                                                             | status = 成功 or 用户不存在                                                                                                                     |
 |   √   | search_user_list_by_user_name       | user_id, session_id, query_user_name              | count, [user_list], status                                                                                                                                  | user_list 内含 user_id                                                                                                                          |
 |   √   | search_user_info_by_email           | user_id, session_id, query_email                  | user_id, user_name, (friend_note,) gender, resident_city_id, resident_city: {city_id, city_name, ...}, avatar_url, comment, is_friend, status               | status = 成功 or 用户不存在                                                                                                                     |
-|   √   | search_user_info_list_by_user_name  | user_id, session_id, query_user_name              | count, [user_info_list], status                                                                                                                             | user_info_list 内含 user_info                                                                                                                   |
+|   √   | search_user_info_list_by_user_name  | user_id, session_id, query_user_name              | count, [user_info_list], status                                                                                                                             | user_info_list 内含 user_info (不含 friend_note, is_friend)                                                                                     |
 |   √   | send_friend_request                 | user_id, session_id, others_user_id, request_note | status                                                                                                                                                      | status = 成功发送请求 or 用户不存在 or 已是好友                                                                                                 |
 |   √   | add_friend                          | user_id, session_id, friend_user_id, friend_note  | status                                                                                                                                                      | friend_note 如果为空串则后端自动设为 friend_user_name, status = 成功添加 or 用户不存在 or 已是好友                                              |
 |   √   | remove_friend                       | user_id, session_id, friend_user_id               | status                                                                                                                                                      | 删除会自动删除双方 travel 的关联                                                                                                                |
