--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -57,7 +57,8 @@
 | :---: | :------------------------------ | :---------------------------------------------------- | :-------------------------------- | :-------------------------------------------------------- |
 |   √   | invite_travel_company           | user_id, session_id, travel_id, friend_user_id        | status                            | 向好友发送邀请请求                                        |
 |   √   | join_friends_travel             | user_id, session_id, friend_user_id, friend_travel_id | status                            | 加入好友的旅行                                            |
-|   √   | remove_travel_company           | user_id, session_id, travel_id, friend_user_id        | status                            |                                                           |
+|   √   | remove_travel_company           | user_id, session_id, travel_id, friend_user_id        | status                            | 删除关联好友                                              |
+|   √   | leave_friends_travel            | user_id, session_id, friend_user_id, friend_travel_id | status                            | 离开好友的旅行                                            |
 |   √   | get_travel_company_list         | user_id, session_id, travel_id                        | count, [company_list], status     | company_list 内含好友 user_id                             |
 |   √   | get_associated_travel_list      | user_id, session_id                                   | count, [travel_list], status      | 返回所有关联了 user_id 的旅行, travel_list 内含 travel_id |
 |   √   | get_associated_travel_info_list | user_id, session_id                                   | count, [travel_info_list], status |                                                           |
