doc: field in update doc

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -104,12 +104,12 @@
 
 ## Message
 
-| 进度  | 接口名称            | 输入参数                    | 输出参数                                                                                                     | 备注                                                                                                                  |
-| :---: | :------------------ | :-------------------------- | :----------------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------- |
-|   √   | get_friend_msg_list | user_id, session_id         | count, [friend_msg_list: {msg_id, user_id, friend_user_id, msg_type, msg_content}], status                   | 返回用户所有的好友消息（加好友/删好友）, msg_type in ['A', 'D']                                                       |
-|   √   | del_friend_msg      | user_id, session_id, msg_id | status                                                                                                       | 删除用户处理过的好友消息，如果同意添加好友则需同时调用 add_friend                                                     |
-|   √   | get_travel_msg_list | user_id, session_id         | count, [travel_msg_list: {msg_id, user_id, friend_user_id, friend_travel_id, msg_type, msg_content}], status | 返回用户所有的行程关联消息（邀请加入行程/加入行程/离开行程/修改行程/删除行程）, msg_type in ['I', 'A', 'L', 'M', 'D'] |
-|   √   | del_travel_msg      | user_id, session_id, msg_id | status                                                                                                       | 删除用户处理过的行程关联消息，如果同意加入好友的旅行则需同时调用 join_friends_travel                                  |
+| 进度  | 接口名称            | 输入参数                    | 输出参数                                                                                              | 备注                                                                                                                                    |
+| :---: | :------------------ | :-------------------------- | :---------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------- |
+|   √   | get_friend_msg_list | user_id, session_id         | count, [friend_msg_list: {msg_id, user_id, friend_user_id, msg_type, msg_content}], status            | 返回用户所有的好友消息（加好友/删好友）, msg_type in ['A', 'D']                                                                         |
+|   √   | del_friend_msg      | user_id, session_id, msg_id | status                                                                                                | 删除用户处理过的好友消息，如果同意添加好友则需同时调用 add_friend                                                                       |
+|   √   | get_travel_msg_list | user_id, session_id         | count, [travel_msg_list: {msg_id, user_id, friend_user_id, travel_id, msg_type, msg_content}], status | 返回用户所有的行程关联消息（邀请加入行程/加入行程/删除关联/主动离开行程/修改行程/删除行程）, msg_type in ['I', 'A', 'R', 'L', 'M', 'D'] |
+|   √   | del_travel_msg      | user_id, session_id, msg_id | status                                                                                                | 删除用户处理过的行程关联消息，如果同意加入好友的旅行则需同时调用 join_friends_travel                                                    |
 
 ---
 
