chore: change api get_others_user_info_list arg name

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -70,7 +70,7 @@
 | 进度  | 接口名称                            | 输入参数                                          | 输出参数                                                                                                                                                                 | 备注                                                                                                                                            |
 | :---: | :---------------------------------- | :------------------------------------------------ | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------- |
 |   √   | get_others_user_info                | user_id, session_id, others_user_id               | user_id, user_name, (friend_note,) gender, resident_city_id, resident_city: {city_id, city_name, ...}, avatar_url, comment, is_friend, status                            | status = 成功 or 用户不存在                                                                                                                     |
-|   √   | get_others_user_info_list           | user_id, session_id, other_user_list[]            | count, [user_info_list: {user_id, user_name, (friend_note,) gender, resident_city_id, resident_city: {city_id, city_name, ...}, avatar_url, comment, is_friend}], status | status = 成功 or 用户不存在                                                                                                                     |
+|   √   | get_others_user_info_list           | user_id, session_id, other_user_list              | count, [user_info_list: {user_id, user_name, (friend_note,) gender, resident_city_id, resident_city: {city_id, city_name, ...}, avatar_url, comment, is_friend}], status | status = 成功 or 用户不存在                                                                                                                     |
 |   √   | search_user_by_email                | user_id, session_id, query_email                  | user_id, status                                                                                                                                                          | status = 成功 or 用户不存在                                                                                                                     |
 |   √   | search_user_list_by_user_name       | user_id, session_id, query_user_name              | count, [user_list], status                                                                                                                                               | user_list 内含 user_id                                                                                                                          |
 |   √   | search_user_info_by_email           | user_id, session_id, query_email                  | user_id, user_name, (friend_note,) gender, resident_city_id, resident_city: {city_id, city_name, ...}, avatar_url, comment, is_friend, status                            | status = 成功 or 用户不存在                                                                                                                     |
