feat: add owner_user_id in get_travel_info

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -40,14 +40,14 @@
 
 ## Travel
 
-| 进度  | 接口名称        | 输入参数                                                                                     | 输出参数                                                                                        | 备注                                                                                                                                                                                                                     |
-| :---: | :-------------- | :------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-|   √   | add_travel      | user_id, session_id, travel_group_id, city_id, date_start, date_end, visibility, travel_note | travel_id, status                                                                               |                                                                                                                                                                                                                          |
-|   √   | copy_travel     | user_id, session_id, travel_group_id, source_travel_id, add_association                      | new_travel_id, status                                                                           | 复制 src_travel 除关联用户外的所有设置并加入自己的 travel_group，若 user 已关联 travel 且 add_association 为真，则自动将 travel 的所有者加入 new_travel，travel 的所有者可以为任意用户（自己好友陌生人）但必须有权限访问 |
-|   √   | remove_travel   | user_id, session_id, travel_group_id, travel_id                                              | status                                                                                          | 删除 travel 会自动通知关联好友                                                                                                                                                                                           |
-|   √   | move_travel     | user_id, session_id, travel_group_id, travel_id, other_travel_group_id                       | status                                                                                          |                                                                                                                                                                                                                          |
-|   √   | get_travel_info | user_id, session_id, travel_id                                                               | city_id, city: {city_id, city_name, ...}, date_start, date_end, visibility, travel_note, status | date 格式 "yyyy-mm-dd"                                                                                                                                                                                                   |
-|   √   | set_travel_info | user_id, session_id, travel_id, city_id, date_start, date_end, visibility, travel_note       | status                                                                                          | 修改 travel 会自动通知关联好友                                                                                                                                                                                           |
+| 进度  | 接口名称        | 输入参数                                                                                     | 输出参数                                                                                                       | 备注                                                                                                                                                                                                                     |
+| :---: | :-------------- | :------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+|   √   | add_travel      | user_id, session_id, travel_group_id, city_id, date_start, date_end, visibility, travel_note | travel_id, status                                                                                              |                                                                                                                                                                                                                          |
+|   √   | copy_travel     | user_id, session_id, travel_group_id, source_travel_id, add_association                      | new_travel_id, status                                                                                          | 复制 src_travel 除关联用户外的所有设置并加入自己的 travel_group，若 user 已关联 travel 且 add_association 为真，则自动将 travel 的所有者加入 new_travel，travel 的所有者可以为任意用户（自己好友陌生人）但必须有权限访问 |
+|   √   | remove_travel   | user_id, session_id, travel_group_id, travel_id                                              | status                                                                                                         | 删除 travel 会自动通知关联好友                                                                                                                                                                                           |
+|   √   | move_travel     | user_id, session_id, travel_group_id, travel_id, other_travel_group_id                       | status                                                                                                         |                                                                                                                                                                                                                          |
+|   √   | get_travel_info | user_id, session_id, travel_id                                                               | owner_user_id, city_id, city: {city_id, city_name, ...}, date_start, date_end, visibility, travel_note, status | date 格式 "yyyy-mm-dd"                                                                                                                                                                                                   |
+|   √   | set_travel_info | user_id, session_id, travel_id, city_id, date_start, date_end, visibility, travel_note       | status                                                                                                         | 修改 travel 会自动通知关联好友                                                                                                                                                                                           |
 
 ---
 
