doc: update backend database doc

--- a/doc/后端数据库概览.md
+++ b/doc/后端数据库概览.md
@@ -4,7 +4,7 @@
 + “行程组”描述一次旅行，“行程”描述一次旅行中到访的一个城市；
 + 目前只存在两种系统消息：加好友请求和关联行程请求，暂不支持用户间消息；
 + 由于 Markdown 语法暂不支持下划线，因此以 `key` 标记主键；
-+ 最后更新时间 2019/5/15，当前版本号 v0.4。
++ 最后更新时间 2019/6/6
 
 ---
 
@@ -62,9 +62,9 @@
 
 **Travel.TravelGroup**
 
-| `travel_group_id` |    travel_group_name    |  travel_group_note   | travel_group_color  |
-| :---------------: | :---------------------: | :------------------: | :-----------------: |
-|                   | 名字信息，20 字符字符串 | 备注信息，任意字符串 | 显示颜色，32 位 int |
+| `travel_group_id` |     travel_group_name     |   travel_group_note    |  travel_group_color  |
+| :---------------: | :-----------------------: | :--------------------: | :------------------: |
+|                   | 名字信息，20 位字符字符串 | 备注信息，140 位字符串 | 显示颜色，7 位  char |
 
 ---
 
@@ -82,9 +82,9 @@
 
 **Travel.Travel**
 
-| `travel_id` | date_start | date_end | city_id |       visibility        |     travel_note      |
-| :---------: | :--------: | :------: | :-----: | :---------------------: | :------------------: |
-|             |            |          |         | 自己`M`/好友`F`/公开`P` | 备注信息，任意字符串 |
+| `travel_id` | date_start | date_end | city_id |       visibility        |      travel_note       |
+| :---------: | :--------: | :------: | :-----: | :---------------------: | :--------------------: |
+|             |            |          |         | 自己`M`/好友`F`/公开`P` | 备注信息，140 位字符串 |
 
 ---
 
@@ -122,6 +122,6 @@
 
 **Message.TravelAssociation**
 
-| `msg_id` | `user_id` | friend_user_id | travel_id |                            msg_type                             | msg_content |
-| :------: | :-------: | :------------: | :-------: | :-------------------------------------------------------------: | :---------: |
-|          |           |                |           | 邀请加入行程`I`/加入行程`A`/离开行程`L`/修改行程`M`/删除行程`D` |             |
+| `msg_id` | `user_id` | friend_user_id | travel_id |                                  msg_type                                   | msg_content |
+| :------: | :-------: | :------------: | :-------: | :-------------------------------------------------------------------------: | :---------: |
+|          |           |                |           | 邀请加入行程`I`/加入行程`A`/离开行程`L`/删除关联`R`/修改行程`M`/删除行程`D` |             |
